packages/ui/tests/fixtures/negative/computed-dynamic-import.fixture.ts
const moduleName = "./status-panel.js";

void import(moduleName);
void import(`./${moduleName}`);
void import(/* scanner-bypass */ moduleName);
